--- a/public/index.html
+++ b/public/index.html
@@ -12,11 +12,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Raleway&family=Secular+One&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Poppins&family=Raleway&family=Secular+One&display=swap"
       rel="stylesheet"
     />
     <!--
